# noticedesk

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  PROGRESS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  deps.py  main.py
app/agents/: classifier.py  extractor.py  reminder.py
app/models/: agent_run.py  case.py  client.py  corpus.py  draft.py  extraction.py  firm.py  kb_gap.py  metrics.py  payment.py
app/prompts/: classifier.py  extractor.py
app/routers/: cases.py  health.py
app/services/: auth.py  board.py  case_pipeline.py  corpus.py  deadlines.py  document_ai.py  eval_notices.py  firestore.py  gemini.py  logging_runs.py  ocr.py  storage.py  wa_client.py  webapp_static.py
corpus_src/: README.md
docs/: SPEC.md
evals/golden_notices/: README.md
scripts/: corpus_ingest.py  eval_notices.py
tests/: conftest.py  test_auth.py  test_board.py  test_case_pipeline.py  test_cases_router.py  test_classifier_agent.py  test_corpus.py  test_deadlines.py  test_eval_notices.py  test_extractor_agent.py  test_health.py  test_logging_runs.py  test_models.py  test_ocr.py  test_reminder_agent.py  test_storage.py  test_wa_client.py  test_webapp_static.py
webapp/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
webapp/src/: App.tsx  api.ts  firebase.ts
webapp/src/auth/: AuthContext.tsx  context.ts
webapp/src/components/: ProtectedRoute.tsx
webapp/src/pages/: Board.tsx  Login.tsx
